omni/tests/goldens/types/undefined_ident_25.omni
let result25:int = missing25
